--- a/preamble.sty
+++ b/preamble.sty
@@ -40,15 +40,16 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Q}{\mathbb{Q}}
+\newcommand{\C}{\mathbb{C}}
 
 \newcommand{\F}{\mathcal{F}}
 
-\newcommand{\B}{\euscr{B}}
-\newcommand{\A}{\euscr{A}}
-\newcommand{\C}{\euscr{C}}
-\newcommand{\O}{\euscr{O}}
-\newcommand{\H}{\euscr{H}}
-\newcommand{\M}{\euscr{M}}
+\newcommand{\euB}{\euscr{B}}
+\newcommand{\euA}{\euscr{A}}
+\newcommand{\euC}{\euscr{C}}
+\newcommand{\euO}{\euscr{O}}
+\newcommand{\euH}{\euscr{H}}
+\newcommand{\euM}{\euscr{M}}
 
 \newcommand{\Pow}{\mathcal{P}}
 
